<resources>
    <string name="app_name">readersstore</string>
    <string name="editor_add_book">Add Book</string>
    <string name="editor_edit_book">Edit Book</string>
    <string name="editor_insert_product_failed">Insert Book Failed</string>
    <string name="editor_insert_product_successful">Insert Book Successful</string>
    <string name="editor_update_product_failed">Update Book Failed</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="unsaved_changes_dialog_msg">Changes not saved</string>
    <string name="discard">Discard changes</string>
    <string name="keep_editing">Continue editing</string>
    <string name="delete_dialog_msg">Delete books</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="editor_delete_product_failed">Delete book failed</string>
    <string name="editor_delete_product_successful">Book deleted</string>
    <string name="hintProductName">Book name</string>
    <string name="hintPrice">Price</string>
    <string name="hintQty">Quantity</string>
    <string name="hintBookName">Book title</string>
    <string name="hintPhone">Phone #</string>

</resources>
