<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin"
                android:text="Product Name"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/edit_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintProductName"
                android:inputType="textCapWords"
                android:padding="@dimen/activity_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin"
                android:text="Price $"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintPrice"
                android:inputType="numberDecimal"
                android:padding="@dimen/activity_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin"
                android:text="Quantity"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/edit_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintQty"
                android:inputType="number"
                android:padding="@dimen/activity_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin"
                android:text="Supplier's Name"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/edit_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintBookName"
                android:inputType="textCapWords"
                android:padding="@dimen/activity_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin"
                android:text="Supplier Phone #"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintPhone"
                android:inputType="phone"
                android:padding="@dimen/activity_margin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:id="@+id/qty_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_action_add"
                android:tint="@color/colorAccent" />

            <ImageButton
                android:id="@+id/qty_remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_action_remove"
                android:tint="@color/colorAccent" />

            <ImageButton
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_action_call"
                android:tint="@color/colorAccent" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_action_delete"
                android:tint="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>